# OakEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Assets/Maps/: Tilemap.tmx
Editor/: CMakeLists.txt  Main.cpp
Editor/Core/: Application.cpp  Application.h
Engine/: CMakeLists.txt  Main.cpp
Engine/Animation/: Animation.cpp  Animation.h
Engine/Camera/: Camera.cpp  Camera.h
Engine/Characters/: Character.h  Player.cpp  Player.h
Engine/Collision/: CollisionHandler.cpp  CollisionHandler.h
Engine/Core/: Engine.cpp  Engine.h
Engine/Graphics/: TextureManager.cpp  TextureManager.h
Engine/Input/: Input.cpp  Input.h
Engine/Map/: GameMap.h  Layer.h  MapParser.cpp  MapParser.h  TileLayer.cpp  TileLayer.h
Engine/Object/: GameObject.h  IObject.h
Engine/Physics/: Point.h  RigidBody.h  Transform.h  Vector2D.h
Engine/Timer/: Timer.cpp  Timer.h
